Научился работать с состояниями, появилась подсказка команд.

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BOT_TOKEN=1823782989:AAGrez92ItLUprNq35aTUFN9sWLfwIfGDCY
+BOT_TOKEN=1823782989:AAH9L6GSPBzXashqSOqF9j3tvBURfwyZe3U
+WEATHER_TOKEN=6abc1c0c8b41fec25ee71bbea8ed7fed
